--- a/translations/messages.bg.yaml
+++ b/translations/messages.bg.yaml
@@ -157,13 +157,324 @@ error_page:
     button_start: 'Към началната страница'
     button_profile: 'Към профила'
 
+    
+# check_email.html.twig
+
+check_email:
+    title: 'Проверете вашия имейл - Barber Shop'
+    hero_title: 'Регистрацията е почти завършена!'
+    heading: 'Проверете вашата електронна поща'
+    sent_to: 'Изпратихме ви имейл на:'
+    instructions: 'Моля, проверете вашата електронна поща и кликнете на линка за потвърждение, за да активирате вашия акаунт.'
+    info_title: 'Важна информация'
+    valid_24h: 'Линкът за потвърждение е валиден за 24 часа'
+    check_spam: 'Проверете и папката "Спам" или "Нежелана поща"'
+    after_confirm: 'След потвърждение ще можете да влезете в системата'
+    already_confirmed: 'Вече потвърдихте имейла си?'
+    login_here: 'Влезте тук'
+
+# appointments.html.twig
+
+appointments:
+    title: "Manager - Всички резервации"
+    hero_title: "Управление на резервации"
+    main_heading: "Управление на резервации"
+    subtitle: "Преглед и редакция на всички резервации"
+    nav_dashboard: "Табло"
+    nav_all: "Всички резервации"
+    filters:
+        title: "Филтри"
+        date: "Дата"
+        barber: "Барбър"
+        status: "Статус"
+        client: "Клиент"
+        all: "Всички"
+        status_confirmed: "Потвърдени"
+        status_completed: "Завършени"
+        status_cancelled: "Отменени"
+        client_placeholder: "Име или email"
+        search: "Търси"
+        clear: "Изчисти"
+    columns:
+        toggle: "Колони"
+        id: "ID"
+        date: "Дата и час"
+        client: "Клиент"
+        phone: "Телефон"
+        barber: "Барбър"
+        procedure: "Услуга"
+        duration: "Време"
+        status: "Статус"
+        date_added: "Дата създаване"
+        date_updated: "Дата промяна"
+        actions: "Действия"
+    table:
+        title: "Резервации"
+        show: "Покажи"
+        no_results: "Няма намерени резервации."
+        minutes: "мин"
+    status:
+        confirmed: "Потвърден"
+        completed: "Завършен"
+        cancelled: "Отменен"
+    actions:
+        edit: "Редактирай"
+        cancel: "Отмени"
+    pagination:
+        shown: "Показани %from%–%to% от %total%"
+        prev: "Предишна"
+        next: "Следваща"
+    modal:
+        edit_title: "Редактиране на резервация"
+        client: "Клиент"
+        barber: "Барбър"
+        select_barber: "Избери барбър"
+        date: "Дата"
+        time: "Час"
+        procedure: "Процедура"
+        select_procedure: "Избери процедура"
+        status: "Статус"
+        notes: "Бележки"
+        cancel: "Отказ"
+        save_changes: "Запази промените"
+
+# welcome.html.twig
+
+welcome:
+    book_now: "Резервирай час сега"
+    title: "Добре дошли в Barber Shop!"
+    hello: "Здравейте"
+    thank_you: "Благодарим ви, че се регистрирахте в <strong>Barber Shop</strong>! Радваме се, че сте част от нашата общност."
+    success: "Вашият профил е създаден и можете да започнете да резервирате часове при вашите любими бръснари."
+    what_you_can_do: "Какво можете да правите в Barber Shop?"
+    feature_book: "Резервирайте часове онлайн"
+    feature_book_desc: "Изберете бръснар, услуга и удобно време за вас"
+    feature_review: "Преглеждайте вашите часове"
+    feature_review_desc: "Следете предстоящи и минали визити"
+    feature_manage: "Управлявайте профила си"
+    feature_manage_desc: "Актуализирайте информация и променяйте парола"
+    feature_reminders: "Получавайте напомняния"
+    feature_reminders_desc: "Ще ви изпращаме напомняне 24 часа преди вашия час"
+    tip: "Съвет"
+    tip_desc: "Добавете нашия имейл адрес в контактите си, за да не пропускате важни съобщения."
+    contact_intro: "Ако имате въпроси или нужда от помощ, не се колебайте да се свържете с нас на:"
+    regards: "Поздрави"
+    success_label: "Успешно"
+    team: "Екипът на Barber Shop"
+
+# verification.html.twig
+
+verify:
+    title: "Потвърдете вашия имейл"
+    header: "Добре дошли в Barber Shop!"
+    hello: "Здравейте"
+    thank_you: "Благодарим ви, че се регистрирахте в Barber Shop!"
+    instructions: "За да завършите регистрацията и да активирате вашия акаунт, моля кликнете на бутона по-долу:"
+    button: "Потвърдете имейл адреса"
+    link_help: "Ако бутонът не работи, копирайте и поставете следния линк в браузъра си:"
+    important: "Важно"
+    link_expiry: "Този линк е валиден за 24 часа. След това ще трябва да се регистрирате отново."
+    ignore: "Ако не сте се регистрирали в Barber Shop, моля игнорирайте този имейл."
+
+
+# password_reset.html.twig
+
+password_reset:
+    title: "Възстановяване на парола"
+    header: "Възстановяване на парола"
+    hello: "Здравейте"
+    request_received: "Получихме заявка за възстановяване на паролата за вашия акаунт."
+    instructions: "За да зададете нова парола, моля кликнете на бутона по-долу:"
+    button: "Възстановете паролата"
+    link_help: "Ако бутонът не работи, копирайте и поставете следния линк в браузъра си:"
+    important: "Важно"
+    link_expiry: "Този линк е валиден за 1 час. След това ще трябва да поискате нов."
+    ignore: "Ако не сте поискали възстановяване на парола, моля игнорирайте този имейл. Вашата парола няма да бъде променена."
+
+
+# password_changed_notification.html.twig
+
+password_changed:
+    title: "✓ Вашата парола беше променена успешно"
+    hello: "Здравейте"
+    confirmation: "Потвърждаваме, че паролата за вашия профил в <strong>Barber Shop</strong> беше променена успешно."
+    success_label: "Успешно"
+    success_text: "Вашата нова парола е активна и можете да я използвате за вход в системата."
+
+    security_header: "Важно за вашата сигурност"
+    security_warning: "Ако <strong>НЕ сте поискали</strong> тази промяна, моля незабавно се свържете с нас на:"
+
+    tips_header: "Съвети за сигурност"
+    tip_unique: "Използвайте уникална парола, която не сте използвали на други сайтове"
+    tip_no_share: "Никога не споделяйте паролата си с други"
+    tip_change_often: "Променяйте паролата си периодично"
+
+    regards: "Поздрави,"
+    team: "Екипът на Barber Shop"
+
+# password_changed_confirmation.html.twig
+
+password_change_confirm:
+    title: "Потвърдете смяната на парола"
+    hello: "Здравейте"
+    request: "Получихме заявка за смяна на паролата за вашия профил в <strong>Barber Shop</strong>."
+    instructions: "За да потвърдите смяната на паролата, моля кликнете бутона по-долу:"
+    button: "Потвърди смяната на парола"
+    link_help: "Ако бутонът не работи, копирайте и поставете този линк в браузъра си:"
+    important: "Важно"
+    link_expiry: "Този линк е валиден само 1 час."
+    ignore: "Ако не сте заявили тази промяна, просто игнорирайте този имейл. Вашата парола няма да бъде променена."
+    regards: "Поздрави,"
+    team: "Екипът на Barber Shop"
+
+
+# guest_appointment_confirmation.html.twig
+
+guest_confirm:
+    title: "Потвърдете вашата резервация"
+    hello: "Здравейте"
+    request: "Получихме вашата заявка за резервация в <strong>Barber Shop</strong>. За да завършите резервацията, моля <strong>потвърдете я</strong> като кликнете на бутона по-долу."
+    important: "Важно"
+    not_confirmed: "Резервацията ви НЕ е потвърдена докато не кликнете на бутона за потвърждение!"
+    details_title: "Детайли за вашата резервация"
+    date: "Дата"
+    time: "Час"
+    barber: "Бръснар"
+    service: "Услуга"
+    duration: "Продължителност"
+    price: "Цена"
+    minutes: "мин."
+    currency: "лв."
+    button_confirm: "✓ Потвърдете резервацията"
+    cancel_text: "Ако искате да <strong>отмените</strong> резервацията, кликнете"
+    cancel_here: "тук"
+    tip: "Съвет"
+    tip_desc: "Ако желаете да следите вашите резервации и да имате достъп до повече функции, можете да <a href=\"{{ url('app_register') }}\" style=\"color: #0c5460; font-weight: bold;\">създадете безплатен акаунт</a>."
+    see_you: "Очакваме ви с нетърпение!"
+    regards: "Поздрави,"
+    team: "Екипът на Barber Shop"
+    validity: "Този линк за потвърждение е валиден 24 часа."
+
+
+# base.html.twig
+
+email:
+    base:
+        title: "Barber Shop"
+        header: "Barber Shop"
+        footer_rights: "Barber Shop. Всички права запазени."
+        footer_notice: "Това е автоматично генериран имейл. Моля, не отговаряйте."
+
+
+# appointment_reminder.html.twig
+
+reminder:
+    title: "⏰ Напомняне за вашия час утре"
+    hello: "Здравейте"
+    message: "Това е приятелско напомняне, че имате запазен час в <strong>Barber Shop</strong> утре!"
+
+    dont_forget: "Не забравяйте!"
+    appointment_time: "Вашият час е утре в"
+
+    details_title: "Детайли за вашия час"
+    date: "Дата"
+    time: "Час"
+    barber: "Бръснар"
+    service: "Услуга"
+    duration: "Продължителност"
+    price: "Цена"
+
+    minutes: "мин."
+    currency: "лв."
+
+    preparation_title: "Подготовка"
+    preparation_text: "Моля, пристигнете 5 минути по-рано. Ако имате нужда от допълнителни услуги, можете да ги обсъдите директно с бръснаря."
+
+    cancel_header: "Трябва да отмените"
+    cancel_text: "Ако не можете да дойдете, моля отменете часа си навреме от вашия профил или се свържете с нас."
+
+    view_appointment: "Преглед на часа"
+
+    see_you: "Очакваме ви с нетърпение утре!"
+    regards: "Поздрави,"
+    team: "Екипът на Barber Shop"
+
+    auto_notice: "Това е автоматично напомняне, изпратено 24 часа преди вашия час."
 
 
 
+# appointment_confirmation.html.twig
 
+confirm:
+    title: "✓ Вашият час е потвърден!"
+    hello: "Здравейте"
+    message: "Вашият час в <strong>Barber Shop</strong> е успешно потвърден!"
+    details_title: "📅 Детайли за вашия час"
 
+    date: "Дата"
+    time: "Час"
+    barber: "Бръснар"
+    service: "Услуга"
+    duration: "Продължителност"
+    price: "Цена"
 
+    minutes: "мин."
+    currency: "лв."
 
+    important: "ℹ️ Важно"
+    important_text: "Моля, бъдете на време. Ако имате нужда да отмените или промените часа си, можете да го направите от вашия профил или да се свържете с нас."
+
+    view_appointments: "Вижте вашите часове"
+
+    see_you: "Очакваме ви с нетърпение!"
+    regards: "Поздрави,"
+    team: "Екипът на Barber Shop"
+
+# appointment_cancellation.html.twig
+
+cancel:
+    title: "❌ Вашият час е отменен"
+    hello: "Здравейте"
+
+    by_barber: "Съжаляваме, но вашият час в <strong>Barber Shop</strong> беше отменен от бръснаря."
+    by_manager: "Вашият час в <strong>Barber Shop</strong> беше отменен от мениджъра/администратора."
+    general: "Вашият час в <strong>Barber Shop</strong> беше отменен успешно."
+
+    details_title: "Детайли за отменения час"
+
+    date: "Дата"
+    time: "Час"
+    barber: "Бръснар"
+    service: "Услуга"
+
+    # Day names
+    sun: "Неделя"
+    mon: "Понеделник"
+    tue: "Вторник"
+    wed: "Сряда"
+    thu: "Четвъртък"
+    fri: "Петък"
+    sat: "Събота"
+
+    # Warning block
+    warning: "Внимание"
+    extra_warning: "Този час беше отменен от %who%. Ако имате въпроси или желаете да резервирате нов час, моля свържете се с нас."
+
+    by_barber_short: "бръснаря"
+    by_manager_short: "мениджъра"
+
+    # Book new appointment block
+    book_new_title: "Искате да резервирате друг час?"
+    book_new_text: "Лесно можете да направите нова резервация от нашия сайт."
+    book_new_button: "Резервирай нов час"
+
+    thanks: "Благодарим за разбирането!"
+    regards: "Поздрави,"
+    team: "Екипът на Barber Shop"
+
+    # Footer contact
+    questions: "За въпроси"
+    phone: "Телефон"
 
 
 
