--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -158,6 +158,333 @@ error_page:
     button_profile: 'Go to Profile'
 
 
+# check_email.html.twig
+
+check_email:
+    title: "Check Your Email - Barber Shop"
+    hero_title: "Registration Almost Complete!"
+    heading: "Check your email inbox"
+    sent_to: "We sent an email to:"
+    instructions: "Please check your inbox and click the confirmation link to activate your account."
+    info_title: "Important information"
+    valid_24h: "The confirmation link is valid for 24 hours"
+    check_spam: "Also check your Spam or Junk folder"
+    after_confirm: "After confirming, you will be able to log in to the system"
+    already_confirmed: "Already confirmed your email?"
+    login_here: "Log in here"
+
+# appointments.html.twig
+
+appointments:
+    title: "Manager - All Appointments"
+    hero_title: "Appointments Management"
+    main_heading: "Manage Appointments"
+    subtitle: "Review and edit all appointments"
+    nav_dashboard: "Dashboard"
+    nav_all: "All Appointments"
+
+    filters:
+        title: "Filters"
+        date: "Date"
+        barber: "Barber"
+        status: "Status"
+        client: "Client"
+        all: "All"
+        status_confirmed: "Confirmed"
+        status_completed: "Completed"
+        status_cancelled: "Cancelled"
+        client_placeholder: "Name or email"
+        search: "Search"
+        clear: "Clear"
+
+    columns:
+        toggle: "Columns"
+        id: "ID"
+        date: "Date & Time"
+        client: "Client"
+        phone: "Phone"
+        barber: "Barber"
+        procedure: "Service"
+        duration: "Duration"
+        status: "Status"
+        date_added: "Created At"
+        date_updated: "Updated At"
+        actions: "Actions"
+
+    table:
+        title: "Appointments"
+        show: "Show"
+        no_results: "No appointments found."
+        minutes: "min"
+
+    status:
+        confirmed: "Confirmed"
+        completed: "Completed"
+        cancelled: "Cancelled"
+
+    actions:
+        edit: "Edit"
+        cancel: "Cancel"
+
+    pagination:
+        shown: "Showing %from%–%to% of %total%"
+        prev: "Previous"
+        next: "Next"
+
+    modal:
+        edit_title: "Edit Appointment"
+        client: "Client"
+        barber: "Barber"
+        select_barber: "Select barber"
+        date: "Date"
+        time: "Time"
+        procedure: "Service"
+        select_procedure: "Select service"
+        status: "Status"
+        notes: "Notes"
+        cancel: "Cancel"
+        save_changes: "Save changes"
+
+# welcome.html.twig
+
+welcome:
+    book_now: "Book an Appointment"
+    title: "Welcome to Barber Shop!"
+    hello: "Hello"
+    thank_you: "Thank you for registering at <strong>Barber Shop</strong>! We're happy to have you with us."
+    success: "Your account has been created and you may now start booking your preferred barbers."
+    what_you_can_do: "What you can do at Barber Shop"
+    feature_book: "Book appointments online"
+    feature_book_desc: "Choose your barber, service and convenient time"
+    feature_review: "Review your appointments"
+    feature_review_desc: "Track upcoming and past visits"
+    feature_manage: "Manage your profile"
+    feature_manage_desc: "Update your information and change your password"
+    feature_reminders: "Receive reminders"
+    feature_reminders_desc: "We will send you a reminder 24 hours before your appointment"
+    tip: "Tip"
+    tip_desc: "Add our email address to your contacts so you don’t miss important messages."
+    contact_intro: "If you have questions or need assistance, feel free to contact us at:"
+    regards: "Regards"
+    success_label: "Success"
+    team: "The Barber Shop Team"
+
+# verification.html.twig
+
+verify:
+    title: "Confirm your email"
+    header: "Welcome to Barber Shop!"
+    hello: "Hello"
+    thank_you: "Thank you for registering at Barber Shop!"
+    instructions: "To complete your registration and activate your account, please click the button below:"
+    button: "Confirm Email Address"
+    link_help: "If the button doesn’t work, copy and paste the following link in your browser:"
+    important: "Important"
+    link_expiry: "This link is valid for 24 hours. After that, you'll need to register again."
+    ignore: "If you did not register at Barber Shop, please ignore this email."
+
+# password_reset.html.twig
+
+password_reset:
+    title: "Password Reset"
+    header: "Password Reset"
+    hello: "Hello"
+    request_received: "We received a request to reset the password for your account."
+    instructions: "To set a new password, please click the button below:"
+    button: "Reset Password"
+    link_help: "If the button doesn't work, copy and paste the following link in your browser:"
+    important: "Important"
+    link_expiry: "This link is valid for 1 hour. After that, you'll need to request a new one."
+    ignore: "If you did not request a password reset, you can safely ignore this email. Your password will not be changed."
+
+
+# password_changed_notification.html.twig
+
+password_changed:
+    title: "✓ Your password has been successfully changed"
+    hello: "Hello"
+    confirmation: "We confirm that the password for your <strong>Barber Shop</strong> account has been successfully changed."
+    success_label: "Success"
+    success_text: "Your new password is now active and can be used to sign in."
+
+    security_header: "Important for your security"
+    security_warning: "If you did <strong>NOT</strong> request this change, please contact us immediately at:"
+
+    tips_header: "Security Tips"
+    tip_unique: "Use a unique password that you haven't used on other sites"
+    tip_no_share: "Never share your password with anyone"
+    tip_change_often: "Change your password periodically"
+
+    regards: "Regards,"
+    team: "The Barber Shop Team"
+
+# password_changed_confirmation.html.twig
+
+password_change_confirm:
+    title: "Confirm Password Change"
+    hello: "Hello"
+    request: "We received a request to change the password for your <strong>Barber Shop</strong> account."
+    instructions: "To confirm the password change, please click the button below:"
+    button: "Confirm Password Change"
+    link_help: "If the button doesn’t work, copy and paste this link in your browser:"
+    important: "Important"
+    link_expiry: "This link is valid for 1 hour."
+    ignore: "If you did not request this change, simply ignore this email. Your password will not be changed."
+    regards: "Regards,"
+    team: "The Barber Shop Team"
+
+
+# guest_appointment_confirmation.html.twig
+
+guest_confirm:
+    title: "Confirm Your Appointment"
+    hello: "Hello"
+    request: "We received your appointment request at <strong>Barber Shop</strong>. To complete your booking, please <strong>confirm it</strong> by clicking the button below."
+    important: "Important"
+    not_confirmed: "Your appointment is NOT confirmed until you click the confirmation button!"
+    details_title: "Appointment Details"
+    date: "Date"
+    time: "Time"
+    barber: "Barber"
+    service: "Service"
+    duration: "Duration"
+    price: "Price"
+    minutes: "min"
+    currency: "BGN"
+    button_confirm: "✓ Confirm Appointment"
+    cancel_text: "If you wish to <strong>cancel</strong> the appointment, click"
+    cancel_here: "here"
+    tip: "Tip"
+    tip_desc: "If you'd like to track your appointments and get access to more features, you can <a href=\"{{ url('app_register') }}\" style=\"color: #0c5460; font-weight: bold;\">create a free account</a>."
+    see_you: "We're looking forward to seeing you!"
+    regards: "Regards,"
+    team: "The Barber Shop Team"
+    validity: "This confirmation link is valid for 24 hours."
+
+# base.html.twig
+
+email:
+    base:
+        title: "Barber Shop"
+        header: "Barber Shop"
+        footer_rights: "Barber Shop. All rights reserved."
+        footer_notice: "This is an automated email. Please do not reply."
+
+# appointment_reminder.html.twig
+
+reminder:
+    title: "⏰ Reminder for your appointment tomorrow"
+    hello: "Hello"
+    message: "This is a friendly reminder that you have an appointment at <strong>Barber Shop</strong> tomorrow!"
+
+    dont_forget: "Don't forget!"
+    appointment_time: "Your appointment is tomorrow at"
+
+    details_title: "Your Appointment Details"
+    date: "Date"
+    time: "Time"
+    barber: "Barber"
+    service: "Service"
+    duration: "Duration"
+    price: "Price"
+
+    minutes: "min"
+    currency: "BGN"
+
+    preparation_title: "Preparation"
+    preparation_text: "Please arrive 5 minutes earlier. If you need additional services, you can discuss them directly with the barber."
+
+    cancel_header: "Need to cancel"
+    cancel_text: "If you cannot come, please cancel your appointment on time from your profile or contact us."
+
+    view_appointment: "View Appointment"
+
+    see_you: "We're looking forward to seeing you tomorrow!"
+    regards: "Regards,"
+    team: "The Barber Shop Team"
+
+    auto_notice: "This is an automated reminder sent 24 hours before your appointment."
+
+
+# appointment_confirmation.html.twig
+
+
+confirm:
+    title: "✓ Your appointment is confirmed!"
+    hello: "Hello"
+    message: "Your appointment at <strong>Barber Shop</strong> has been successfully confirmed!"
+    details_title: "Appointment Details"
+
+    date: "Date"
+    time: "Time"
+    barber: "Barber"
+    service: "Service"
+    duration: "Duration"
+    price: "Price"
+
+    minutes: "min."
+    currency: "BGN"
+
+    important: "Important"
+    important_text: "Please be on time. If you need to cancel or change your appointment, you can do so from your profile or by contacting us."
+
+    view_appointments: "View Your Appointments"
+
+    see_you: "We're looking forward to seeing you!"
+    regards: "Regards,"
+    team: "The Barber Shop Team"
+
+# appointment_cancellation.html.twig
+
+cancel:
+    title: "❌ Your appointment has been cancelled"
+    hello: "Hello"
+
+    by_barber: "We are sorry, but your appointment at <strong>Barber Shop</strong> was cancelled by the barber."
+    by_manager: "Your appointment at <strong>Barber Shop</strong> was cancelled by the manager/administrator."
+    general: "Your appointment at <strong>Barber Shop</strong> has been cancelled successfully."
+
+    details_title: "Cancelled Appointment Details"
+
+    date: "Date"
+    time: "Time"
+    barber: "Barber"
+    service: "Service"
+
+    sun: "Sunday"
+    mon: "Monday"
+    tue: "Tuesday"
+    wed: "Wednesday"
+    thu: "Thursday"
+    fri: "Friday"
+    sat: "Saturday"
+
+    warning: "Warning"
+    extra_warning: "This appointment was cancelled by %who%. If you have questions or want to book a new appointment, please contact us."
+
+    by_barber_short: "the barber"
+    by_manager_short: "the manager"
+
+    book_new_title: "Want to book another appointment?"
+    book_new_text: "You can easily make a new reservation from our website."
+    book_new_button: "Book a new appointment"
+
+    thanks: "Thank you for your understanding!"
+    regards: "Regards,"
+    team: "The Barber Shop Team"
+
+    questions: "For questions"
+    phone: "Phone"
+
+
+
+
+
+
+
+
+
+
 
 
 
