fix some appointnemtn issues, csrf tokens

--- a/translations/messages.bg.yaml
+++ b/translations/messages.bg.yaml
@@ -1,3 +1,27 @@
+# Months and days (used in calendar)
+months:
+    1: "Януари"
+    2: "Февруари"
+    3: "Март"
+    4: "Април"
+    5: "Май"
+    6: "Юни"
+    7: "Юли"
+    8: "Август"
+    9: "Септември"
+    10: "Октомври"
+    11: "Ноември"
+    12: "Декември"
+
+days:
+    0: "Неделя"
+    1: "Понеделник"
+    2: "Вторник"
+    3: "Сряда"
+    4: "Четвъртък"
+    5: "Петък"
+    6: "Събота"
+
 #  homepage.html.twig
 
 homepage:
@@ -100,7 +124,7 @@ appointment_table:
     service: 'Услуга'
     duration: 'Продължителност'
     status: 'Статус'
-    action: 'ействия'
+    action: 'Действия'
     today: 'Днес'
     confirm: 'Потвърден'
     completed: 'Завършен'
