--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,3 +1,27 @@
+# Months and days (used in calendar)
+months:
+    1: "January"
+    2: "February"
+    3: "March"
+    4: "April"
+    5: "May"
+    6: "June"
+    7: "July"
+    8: "August"
+    9: "September"
+    10: "October"
+    11: "November"
+    12: "December"
+
+days:
+    0: "Sunday"
+    1: "Monday"
+    2: "Tuesday"
+    3: "Wednesday"
+    4: "Thursday"
+    5: "Friday"
+    6: "Saturday"
+
 #  homepage.html.twig
 
 homepage:
